[build-system]
requires = ["setuptools>=70.3.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tmeanalyzer"
version = "1.0.6"
description = "tmeanalyzer"
readme = "README.md"
authors = [{ name = "Hayri E Balcioglu", email = "balciemrah@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["tme", "pathology", "image analysis"]
dependencies = [
    "numpy == 1.23.3",
    "pandas == 2.2.2",
    "matplotlib == 3.6.3",
    "scikit-image == 0.24.0",
    "tensorflow == 2.12.0",
    "stardist == 0.9.1",
    "imagecodecs == 2024.6.1",
]

requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["bumpver", "black", "pyinstaller"]

[project.scripts]
tmeanalyzer = "tmeanalyzer:start"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.bumpver]
current_version = "1.0.6"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/tmeanalyzer/version.py" = [
    "{version}"
]

[tool.black]
line-length = 88
target-version = ['py311']